--- a/service.yaml
+++ b/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: helloworld
-  name: helloworld
+    app: hello-world
+  name: hello-world
 spec:
   ports:
   - name: 8080-8080
@@ -11,7 +11,7 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: helloworld
+    app: hello-world
   type: NodePort
 status:
   loadBalancer: {}
