--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 services:
   mongo:
     image: mongo
@@ -6,6 +6,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+      - version=v0.2.0
+    environment:
+    - MONGO_HOST=mongo
     ports:
     - "8080:8080"
     depends_on:
