--- a/project.json
+++ b/project.json
@@ -2,6 +2,5 @@
   "name": "hello-world",
   "version": "0.3.2",
   "author": "Alejandro Guzman",
-  "author_email": "",
-  "py_version": "3.7"
+  "author_email": ""
 }
